[package]
name = "mpu_calculator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
directories = "6.0.0"
maud = { version = "0.27.0", features = ["axum"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
