[package]
name = "mpu_calculator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
axum-login = "0.18.0"
bcrypt = "0.19.0"
directories = "6.0.0"
futures-util = "0.3.32"
maud = { version = "0.27.0", features = ["axum"] }
password-auth = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tower-sessions = "0.15.0"
